tests/langs/snapshots/r#mod__langs__base.c_do.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 65
  l: "    do {\n"
  m: "    ^^^^^^"
- n: 66
  l: "        printf(\"do-while\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 67
  l: "    } while (0);\n"
  m: "^^^^^^^^^^^^^^^^  "
