tests/langs/snapshots/r#mod__langs__base.c_for.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 57
  l: "    for (int a = 0; a < 10; a++) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 58
  l: "        printf(\"for\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 59
  l: "    }\n"
  m: "^^^^^  "
