tests/langs/snapshots/r#mod__langs__base.c_function_definition.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 38
  l: "int main(void) {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 39
  l: "    int a = 0; /* C Stype comments */\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 40
  l: "    struct S s;\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 41
  l: "    struct S *sp;\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 42
  l: "    union U u;\n"
  m: ^^^^^^^^^^^^^^^^
- n: 43
  l: "\n"
  m: ^^
- n: 44
  l: "    // Call a function.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 45
  l: "    printf(\"Hello, World!\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 46
  l: "    s.cb();\n"
  m: ^^^^^^^^^^^^^
- n: 47
  l: "    sp->cb();\n"
  m: ^^^^^^^^^^^^^^^
- n: 48
  l: "\n"
  m: ^^
- n: 49
  l: "    if (a) {\n"
  m: ^^^^^^^^^^^^^^
- n: 50
  l: "        printf(\"a\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 51
  l: "    } else if (sp) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 52
  l: "        printf(\"b\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 53
  l: "    } else {\n"
  m: ^^^^^^^^^^^^^^
- n: 54
  l: "        printf(\"c\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 55
  l: "    }\n"
  m: ^^^^^^^
- n: 56
  l: "\n"
  m: ^^
- n: 57
  l: "    for (int a = 0; a < 10; a++) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 58
  l: "        printf(\"for\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 59
  l: "    }\n"
  m: ^^^^^^^
- n: 60
  l: "\n"
  m: ^^
- n: 61
  l: "    while (a++ < 100) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 62
  l: "        printf(\"while\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 63
  l: "    }\n"
  m: ^^^^^^^
- n: 64
  l: "\n"
  m: ^^
- n: 65
  l: "    do {\n"
  m: ^^^^^^^^^^
- n: 66
  l: "        printf(\"do-while\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 67
  l: "    } while (0);\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 68
  l: "\n"
  m: ^^
- n: 69
  l: "    switch (a) {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 70
  l: "        case 1:\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 71
  l: "            return 0;\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^
- n: 72
  l: "        default:\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 73
  l: "            return -1;\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^
- n: 74
  l: "    }\n"
  m: ^^^^^^^
- n: 75
  l: "\n"
  m: ^^
- n: 76
  l: "    return 0;\n"
  m: ^^^^^^^^^^^^^^^
- n: 77
  l: "}\n"
  m: "^  "
