tests/langs/snapshots/r#mod__langs__base.c_identifier.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 27
  l: "    A, ///< Doxygen comment.\n"
  m: "    ^                         "
- n: 28
  l: "    B, /*< Doxygen comment. */\n"
  m: "    ^                           "
- n: 29
  l: "    C,\n"
  m: "    ^   "
- n: 33
  l: "extern int external_var;\n"
  m: "           ^^^^^^^^^^^^   "
- n: 35
  l: "const char *external_function_declaration(const void *ptr);\n"
  m: "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^                    "
- n: 35
  l: "const char *external_function_declaration(const void *ptr);\n"
  m: "                                                      ^^^    "
- n: 38
  l: "int main(void) {\n"
  m: "    ^^^^          "
- n: 39
  l: "    int a = 0; /* C Stype comments */\n"
  m: "        ^                              "
- n: 40
  l: "    struct S s;\n"
  m: "             ^   "
- n: 41
  l: "    struct S *sp;\n"
  m: "              ^^   "
- n: 42
  l: "    union U u;\n"
  m: "            ^   "
- n: 45
  l: "    printf(\"Hello, World!\\n\");\n"
  m: "    ^^^^^^                         "
- n: 46
  l: "    s.cb();\n"
  m: "    ^        "
- n: 47
  l: "    sp->cb();\n"
  m: "    ^^         "
- n: 49
  l: "    if (a) {\n"
  m: "        ^     "
- n: 50
  l: "        printf(\"a\\n\");\n"
  m: "        ^^^^^^             "
- n: 51
  l: "    } else if (sp) {\n"
  m: "               ^^     "
- n: 52
  l: "        printf(\"b\\n\");\n"
  m: "        ^^^^^^             "
- n: 54
  l: "        printf(\"c\\n\");\n"
  m: "        ^^^^^^             "
- n: 57
  l: "    for (int a = 0; a < 10; a++) {\n"
  m: "             ^                      "
- n: 57
  l: "    for (int a = 0; a < 10; a++) {\n"
  m: "                    ^               "
- n: 57
  l: "    for (int a = 0; a < 10; a++) {\n"
  m: "                            ^       "
- n: 58
  l: "        printf(\"for\\n\");\n"
  m: "        ^^^^^^               "
- n: 61
  l: "    while (a++ < 100) {\n"
  m: "           ^             "
- n: 62
  l: "        printf(\"while\\n\");\n"
  m: "        ^^^^^^                 "
- n: 66
  l: "        printf(\"do-while\\n\");\n"
  m: "        ^^^^^^                    "
- n: 69
  l: "    switch (a) {\n"
  m: "            ^     "
