tests/langs/snapshots/r#mod__langs__base.c_if.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 49
  l: "    if (a) {\n"
  m: "    ^^^^^^^^^^"
- n: 50
  l: "        printf(\"a\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 51
  l: "    } else if (sp) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 52
  l: "        printf(\"b\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 53
  l: "    } else {\n"
  m: ^^^^^^^^^^^^^^
- n: 54
  l: "        printf(\"c\\n\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 55
  l: "    }\n"
  m: "^^^^^  "
