tests/langs/snapshots/r#mod__langs__base.c_includes.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 1
  l: "#include <stdio.h>\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 2
  l: "#include \"base.h\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
